# treeland-protocols

./: CMakeLists.txt  README.md  README.zh_CN.md  REUSE.toml
cmake/: CMakeLists.txt  TreelandProtocolsConfig.cmake.in
debian/: changelog  control  copyright
nix/: default.nix
xml/: treeland-capture-unstable-v1.xml  treeland-dde-shell-v1.xml  treeland-ddm-v1.xml  treeland-foreign-toplevel-manager-v1.xml  treeland-output-manager-v1.xml  treeland-personalization-manager-v1.xml  treeland-screensaver-v1.xml  treeland-shortcut-manager-v1.xml  treeland-shortcut-manager-v2.xml  treeland-virtual-output-manager-v1.xml  treeland-wallpaper-color-v1.xml  treeland-window-management-v1.xml
